...
  const { t } = useTranslation()
  const isPending = !!pendingProviderId

  return (
    <View className="mx-auto flex w-full max-w-sm items-center justify-center gap-4 px-4">
      <Pressable
        testID="login-provider-credential"
        hitSlop={20}
        disabled={isPending}
        className="border-hairline flex w-full flex-row items-center justify-center gap-2 rounded-xl border-opaque-separator px-5 py-4 disabled:opacity-60"
        onPress={onPressEmail}
      >
        {!!credentialProvider?.icon64 && (
...
