...
          headerRight={() => (
            <HeaderSubmitTextButton
              isValid={isValid}
              onPress={form.handleSubmit(submit)}
              isLoading={isLoading}
              label={isSubscribed ? tCommon("words.save") : tCommon("words.follow")}
              testID="follow-submit"
            />
          )}
        />
      }
    >
      {/* Group 1 */}
...
      </GroupedInsetListCard>
      {isSubscribed && (
        <GroupedInsetListCard className="p-4">
          <View className="items-start">
            <Text
              className="text-base font-medium text-red"
              testID="follow-unfollow"
              onPress={handleUnfollow}
            >
              {t("operation.unfollow")}
            </Text>
          </View>
        </GroupedInsetListCard>
...
