...
  "clipboard.read_failed": "Unable to read from clipboard. Please ensure clipboard permissions are granted.",
  "discover.any_url_or_keyword": "Any URL or Keyword",
  "discover.default_option": " (default)",
  "discover.feed_description": "The description of this feed is as follows, and you can fill out the parameter form with the relevant information.",
  "discover.feed_maintainers": "This feed is provided by RSSHub, with credit to <maintainers />",
  "discover.find_feeds_description": "Find and add new feeds to your collection",
  "discover.go_to_discover_hint": "Or go to <Link>Discover</Link><Icon /><br />to find more interesting content.",
  "discover.import.click_to_upload": "Click to upload OPML file",
  "discover.import.file_too_large": "Your OPML file must be less than 500KB.",
  "discover.import.import_completed_with_issues": "Import completed with some issues",
  "discover.import.import_successful": "Import completed successfully",
  "discover.import.invalid_file_type": "Your OPML file must be in OPML or XML format.",
  "discover.import.no_feeds_found": "No feeds found matching your search.",
...
  "login.passwords_do_not_match": "Passwords don't match",
  "login.privacy": "Privacy Policy",
  "login.send_magic_link": "Send Magic Link",
  "login.signUp": "Sign up with email",
  "login.submit": "Submit",
  "login.terms": "Terms of Service",
  "login.title": "Welcome to Folo",
  "mark_all_read_button.auto_confirm_info": "Will be confirmed automatically after {{countdown}}s.",
  "mark_all_read_button.confirm": "Confirm",
  "mark_all_read_button.confirm_mark_all": "Mark <which /> as read?",
  "mark_all_read_button.confirm_mark_all_info": "Confirm mark all as read?",
  "mark_all_read_button.done": "Marked",
  "mark_all_read_button.mark_as_read": "Mark <which /> as read",
...
  "user_button.profile": "Profile",
  "user_button.wallet": "Wallet",
  "user_profile.close": "Close",
  "user_profile.created_lists": "Created Lists",
  "user_profile.edit": "Edit",
  "user_profile.share": "Share",
  "user_profile.subscriptions": "Subscriptions",
  "user_profile.title": "User Profile",
  "user_profile.title_with_name": "{{name}}'s Profile",
  "user_profile.toggle_item_style": "Toggle Item Style",
  "words.actions": "Actions",
  "words.all": "All",
  "words.browser": "Browser",
...
