...
                {t("words.search")}
              </Text>
            )}
          </Animated.View>
        )}
        <TextInput
          testID="discover-search-input"
          allowFontScaling={false}
          textAlignVertical="center"
          enterKeyHint="search"
          autoCapitalize="none"
          autoCorrect={false}
          autoFocus={isFocused}
...
