...
  "profile.profile.social_links_youtube": "Youtube ID",
  "profile.profile.website": "Website",
  "profile.reset_password_mail_sent": "Reset password mail sent.",
  "profile.security": "Security",
  "profile.set_avatar": "Set Avatar",
  "profile.sign_out.confirm_message": "Are you sure you want to sign out?",
  "profile.sign_out.confirm_title": "Confirm sign out",
  "profile.submit": "Submit",
  "profile.title": "Profile Settings",
  "profile.totp_code.enter_to_continue": "Enter your TOTP code to continue",
  "profile.totp_code.init": "Scan the QR code with your TOTP app",
  "profile.totp_code.invalid": "Invalid TOTP code.",
  "profile.totp_code.label": "TOTP Code",
...
  "titles.notifications": "Notifications",
  "titles.operations": "Operations",
  "titles.plan.long": "Upgrade your plan",
  "titles.plan.short": "Plan",
  "titles.privacy": "Privacy",
  "titles.shortcuts": "Shortcuts",
  "titles.sign_out": "Sign Out",
  "titles.sources": "Sources",
  "titles.spotlight": "Spotlight",
  "titles.subscription.long": "Manage your subscription",
  "titles.subscription.short": "Subscription",
  "wallet.balance.title": "Your Balance",
  "wallet.balance.withdrawable": "Withdrawable",
...
