appId: is.follow
---
- runFlow:
    file: ./dismiss-overlays.yaml
- tapOn:
    text: Discover
- tapOn:
    id: discover-search-input
- eraseText
- inputText: folo://onboarding
- pressKey: Enter
- extendedWaitUntil:
    visible:
      id: discover-feed-follow-action
    timeout: 20000
- tapOn:
    id: discover-feed-follow-action
- extendedWaitUntil:
    visible:
      id: follow-unfollow
    timeout: 20000
- tapOn:
    id: follow-unfollow
- extendedWaitUntil:
    visible: Unsubscribe?
    timeout: 10000
- tapOn:
    point: "275,497"
- runFlow:
    when:
      visible:
        id: navigation-back
    commands:
      - tapOn:
          id: navigation-back
- extendedWaitUntil:
    visible: Discover
    timeout: 20000
